--- a/public/shortcuts.html
+++ b/public/shortcuts.html
@@ -53,6 +53,17 @@
     </div>
     <div class="panel">
         <div class="panel-heading">
+            <div class="panel-title">Vimium shortcuts</div>
+        </div>
+        <div class="panel-body">
+            <ul>
+                <li>Super search L + O</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="panel">
+        <div class="panel-heading">
             <div class="panel-title">Stack</div>
         </div>
         <div class="panel-body">
